--- a/.gitignore
+++ b/.gitignore
@@ -7,5 +7,10 @@
 /spec/reports/
 /tmp/
 
+# Build artifacts
+*.gem
+
 # rspec failure tracking
 .rspec_status
+/docs/internal/*
+.github/copilot-instructions.md
