--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,13 @@
 .rspec_status
 /docs/internal/*
 .github/copilot-instructions.md
+
+# dotenv environment variable files
+.env
+.env.development.local
+.env.test.local
+.env.production.local
+.env.local
+
+# Test files
+test_*.rb
